bdr.BDR2.scala.error
Erreur de compilation :
BDR2:3: error: '(' expected but identifier found.
 if  msg match{
     ^BDR2:21: error: illegal start of simple expression
} 
^